--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: install alsa
+      run: sudo apt instal alsa-sys
+      shell: bash
     - name: Build
       run: cargo build --verbose
     - name: Run tests
