--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - run: apt-get search alsa-sys
+    - run: apt search alsa-sys
     - name: install alsa
       run: sudo apt install alsa-sys
       shell: bash
