--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,9 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - run: apt search alsa-sys
     - name: install alsa
-      run: sudo apt install alsa-sys
+      run: sudo apt install librust-alsa-sys-dev
       shell: bash
     - name: Build
       run: cargo build --verbose
