--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,8 @@ jobs:
       run: sudo apt install librust-alsa-sys-dev
       shell: bash
     - name: Build
+      run: cargo fix --verbose
+    - name: Build
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
