--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
     - name: install alsa
       run: sudo apt install librust-alsa-sys-dev
       shell: bash
-    - name: Build
+    - name: Fix
       run: cargo fix --verbose
     - name: Build
       run: cargo build --verbose
