triyng impl type alias

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+[features]
+type_alias_impl_trait = []
 [dependencies]
 rand = "0.8"
 midir = "0.9.1"
